2010-07-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/strstr.c (__m128i_strloadu_tolower): Use
	lower-latency instructions.

2010-07-23  Ulrich Drepper  <drepper@redhat.com>

	* string/test-strcasestr.c: New file.
	* string/test-strstr.c: New file.
	* string/Makefile (strop-tests): Add strstr and strcasestr.
	* string/str-two-way.h: Don't undefine MAX.
	* string/strcasestr.c: Don't define alias if NO_ALIAS is defined.

2010-07-21  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Add
	strcasestr-nonascii.
	(CFLAGS-strcasestr-nonascii.c): Define.
	* sysdeps/i386/i686/multiarch/strcasestr-nonascii.c: New file.
	* sysdeps/x86_64/multiarch/strcasestr-nonascii.c (STRSTR_SSE42):
	Remove unused attribute.

2010-07-20  Roland McGrath  <roland@redhat.com>

	* elf/dl-sysdep.c (_dl_important_hwcaps): Add dsocaps mask to
	dl_hwcap_mask as well as dl_hwcap.  Without this, dsocaps matching in
	ld.so.cache was broken.  With it, there is no way to disable dsocaps
	like LD_HWCAP_MASK can disable hwcaps.

2010-06-02  Emilio Pozuelo Monfort  <pochu27@gmail.com>

	* sysdeps/mach/hurd/sendmsg.c (__libc_sendmsg): Fix memory leaks.

2010-07-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/multiarch/strstr.c: Rewrite to avoid indirect function
	call in strcasestr.
	* sysdeps/x86_64/multiarch/strcasestr.c: Declare
	__strcasestr_sse42_nonascii.
	* sysdeps/x86_64/multiarch/Makefile: Add rules to build
	strcasestr-nonascii.c.
	* sysdeps/x86_64/multiarch/strcasestr-nonascii.c: New file.

2010-06-15  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/powerpc/powerpc32/power6/fpu/s_copysign.S: New file.
	* sysdeps/powerpc/powerpc32/power6/fpu/s_copysignf.S: New file.
	* sysdeps/powerpc/powerpc64/power6/fpu/s_copysign.S: New file.
	* sysdeps/powerpc/powerpc64/power6/fpu/s_copysignf.S: New file.

2010-07-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/fpathconf.c (__fpathconf): Use __fcntl not
	fcntl.